test/should_pass/basic_062.grg
actions basic_062 using basic_model_002;

rule r {
	pattern {
		x : AA;
	}
	replace {
		eval {
			x.ia = 42;
		}
	}
}

