test/should_fail/basic_062.grg
actions basic_062 using attrib_model_001;

rule r {
	pattern {
		x: NBOOL;
		q: Q;
	}
	modify {
		eval {
			x.a = false == q.a;
		}
	}
}

